--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ author: Michell Martinez, Riley Bair, Kaitlin McKay, Amanda Hellenkamp
 #
 # Set the metadata for your collection (the name of the csv file in your _data directory that describes the objects in your collection) 
 # Use the filename of your CSV **without** the ".csv" extension! E.g. _data/demo-metadata.csv --> "demo-metadata"
-metadata: group2_metadata_final
+metadata: group2_metadata
 
 ##########
 # Site/Organization Branding 
