--- a/_config.yml
+++ b/_config.yml
@@ -22,10 +22,10 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-gh
 # title of site appears in banner
 title: Track Town Eugene, OR
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: Our digital collection thematic research topic is focused on Eugene OR transformation into Track Town USA. We feature objects from GLAM repositories; Oregon Digital and Oregon News. This collection showcases images, articles, programs and a video to tell the story of where the legacy began. We focused on key figures like athletes and coaches, architecture transformation of the field, Nike sponsorship, community trails and murals to tell the story. Explore the influence of Nike, Bill Hayward program development, iconic figures and community engagement to the sport. 
+tagline: Our digital collection thematic research topic is focused on Eugene OR transformation into Track Town USA.
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: A collection that shows a timeline of Eugene, OR turning into the heart of Track. 
+description:  
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: Michell Martinez, Riley Bair, Kaitlin McKay, Amanda Hellenkamp
 
