--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: Track Town Eugene, OR
 tagline: Our digital collection thematic research topic is focused on Eugene OR transformation into Track Town USA.
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description:  
+description:  This collection showcases images, articles, programs and a video to tell the story of where the legacy began. We focused on key figures like athletes and coaches, architecture transformation of the field, Nike sponsorship, community trails and murals to tell the story. Explore the influence of Nike, Bill Hayward program development, iconic figures and community engagement to the sport. 
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: Michell Martinez, Riley Bair, Kaitlin McKay, Amanda Hellenkamp
 
